configuration is for documentation site

--- a/documentation/config.yaml
+++ b/documentation/config.yaml
@@ -1,2 +1,2 @@
-name: Example RabbitFish Site
-description: This is an example site for the RabbitFish static site generator.
+name: RabbitFish Documentation
+description: Documentation for the RabbitFish static site generator.
